Fix a focus issue for VR headset activation.

The bug here is that we aren't updating whether to listen for headset
activation when focus changes.

BUG=846661

Change-Id: I029099a6de8b8337d51aa210ad58165fbd01a050
Reviewed-on: https://chromium-review.googlesource.com/1074742
Reviewed-by: Bill Orr <billorr@chromium.org>
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562282}
Former-commit-id: 5345e319f856fc5f0421d4f8e78860748061e4a5